Hoàn thành code phần giỏ hàng, thêm sản phẩm vào giở hàng, và xác nhận giỏ hàng bằng cách tao mới đơn hàng

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,12 @@ spring:
         id:
           new_generator_mappings: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
+
+server:
+  servlet:
+    session:
+#      timeout: 30
+      cookie:
+        http-only: true
+        secure: false
