--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,10 @@ server:
       cookie:
         http-only: true
         secure: false
+
+cors:
+  allowed-origins: "*"
+  allowed-methods: "GET, POST, PUT, DELETE, OPTIONS"
+  allowed-headers: "*"
+  allow-credentials: true
+  max-age: 3600
